Added a few comments

--- a/MLTest.ipynb
+++ b/MLTest.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TASK1: DATA LOADING\n",
+    "#### Task 1: Data loading\n",
     "Here I import all samples from the fetched json files, taking into account that each file can contain more than one sample.   \n",
     "The `data` structure is a python dictionary with the different instruments as keys and for each instrument (key) a list of feature vectors is given. We can also convert it to XY vectors using `convertToXY`.   \n",
     "As I am going to build manually a GMM per class, I will go on with the dict structure because I find it easier to treat and iterate through as it gives you instant acces to all samples for each class.\n",
@@ -221,7 +221,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we tested how the model works varying the number of gaussian components and the covariance type. In the [results csv file](results.csv) we can see the results (precission, recall and f1score) for each iteration of the process and in the graphic above we can see the average of this `nruns` iterations for each covariance type and number of components."
+    "Here we tested how the model works varying the number of gaussian components and the covariance type. In the [results csv file](results.csv) we can see the results (precission, recall and f1score) for each iteration of the process.\n",
+    "\n",
+    "In the plot above each bar is the average of `nruns`=3 iterations. We can see that for this particular dataset `spherical` covariance matrix does not seem to work good. `full` covariance matrix performance decrease as we increase the number of components as the computations are more complex. `diagonal` covariance matrix starts working properly from 15 gaussian components and `tied` covariance matrix works good for any number of components."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fine tuning the models with normalized data\n",
+    "Now in order to improve the performance of GMMs, as they are known to work better with normalized data, I am going to normalize the whole dataset and repeat the experiment above with this new normalized data."
    ]
   },
   {
@@ -262,6 +272,23 @@
     "%%time\n",
     "data_norm = normalize_data(data)\n",
     "bcov, bcomp = analyzeGMMs(data_norm, max_components=50, nruns=3, results_file='results_norm.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we tested how the model works varying the number of gaussian components and the covariance type with **normalized data**. In the [results csv file](results_norm.csv) we can see the results (precission, recall and f1score) for each iteration of the process.\n",
+    "\n",
+    "In the plot above each bar is the average of `nruns`=3 iterations. With normalized data we can see the typical behaviour of GMMs. For `tied`, `diagonal` and `spherical` covariance matrix the F1-Score increases logarithmically as we increase the number of components, and for the `full` covariance matrix it decreases as we increase the number of components because the complex computations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final Results\n",
+    "Now with the best parameters obtained in the experiment above I am going to perform a single execution in order to get the final results without averaging iterations."
    ]
   },
   {
@@ -312,21 +339,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the cell below I perform a classification of a single random sample just to compute the prediction CPU time. As we can see the prediction of a single sample varies depending on the execution, but never takes much more than 10ms."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "guitar guitar\n"
+      "kick kick\n",
+      "CPU times: user 9.99 ms, sys: 0 ns, total: 9.99 ms\n",
+      "Wall time: 10.4 ms\n"
      ]
     }
    ],
    "source": [
-    "clas = random.choice(data_norm.keys())\n",
-    "sample = random.choice(data_norm[clas])\n",
+    "%%time\n",
+    "clas = random.choice(test.keys())\n",
+    "sample = random.choice(test[clas])\n",
     "predicted = predict(gmms,sample)\n",
     "print clas, predicted"
    ]
