--- a/MLTest.ipynb
+++ b/MLTest.ipynb
@@ -7,7 +7,9 @@
     "# MusicGroup Machine Learning Test\n",
     "\n",
     "Marc Siquier Penyafort  \n",
-    "marcsiquierpenyafort@gmail.com"
+    "marcsiquierpenyafort@gmail.com\n",
+    "\n",
+    "In this task I will use **Gaussian Mixture Models** as they are known (and as we will see below) to work very good to classify audio-extracted data such as MFCC, GFCC,..."
    ]
   },
   {
@@ -110,7 +112,7 @@
    "metadata": {},
    "source": [
     "As we can see, we have 9 different classes with a total of 8869 samples.   \n",
-    "Dividing the dataset into train and test with a train percentage of 0.7 we obtain 6212 training samples and 2657 test samples.   \n",
+    "Dividing randomly the dataset into train and test with a train percentage of 70% we obtain 6212 training samples and 2657 test samples.   \n",
     "As we have different number of instances per class we say it is a unbalanced dataset and probabilistic generative models such as GMMs are known for work properly with this type of datasets."
    ]
   },
@@ -118,10 +120,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Compute and Score GMMs\n",
-    "Here I will compute a GMM for each class with the train dataset using 6 gaussian components and full (each component has its own general covariance matrix) covariance matrix.  \n",
+    "#### Task 2: Compute and Score GMMs\n",
+    "Here I will compute a GMM for each class with the train dataset using 3 gaussian components and full (each component has its own general covariance matrix) covariance matrix.  \n",
     "As predicted class I take the GMM with best score for each test sample.   \n",
-    "**Note:**: As we divide the dataset randomly, results vary for each execution of the code below."
+    "**Note:**: As we divided the dataset randomly in the previous step, results vary depending on the train and test dataset."
    ]
   },
   {
@@ -223,7 +225,10 @@
    "source": [
     "Here we tested how the model works varying the number of gaussian components and the covariance type. In the [results csv file](results.csv) we can see the results (precission, recall and f1score) for each iteration of the process.\n",
     "\n",
-    "In the plot above each bar is the average of `nruns`=3 iterations. We can see that for this particular dataset `spherical` covariance matrix does not seem to work good. `full` covariance matrix performance decrease as we increase the number of components as the computations are more complex. `diagonal` covariance matrix starts working properly from 15 gaussian components and `tied` covariance matrix works good for any number of components."
+    "In the plot above each bar is the average of `nruns`=3 iterations.   \n",
+    "We can see that for this particular dataset `spherical` covariance matrix (each component has its own single variance) does not seem to work good as the data is normalized.   \n",
+    "`full` covariance matrix (each component has its own general covariance matrix) performance decrease as we increase the number of components as the computations are more complex.   \n",
+    "`diagonal` covariance matrix (each component has its own diagonal covariance matrix) starts working properly from 15 gaussian components and `tied` covariance matrix (all components share the same general covariance matrix) works good for any number of components."
    ]
   },
   {
@@ -342,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the cell below I perform a classification of a single random sample just to compute the prediction CPU time. As we can see the prediction of a single sample varies depending on the execution, but never takes much more than 10ms."
+    "In the cell below I perform a classification of a single random sample just to compute the prediction CPU time. As we can see the prediction time of a single sample varies depending on the execution, but never takes much more than 10ms."
    ]
   },
   {
@@ -366,6 +371,25 @@
     "sample = random.choice(test[clas])\n",
     "predicted = predict(gmms,sample)\n",
     "print clas, predicted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pros & cons \n",
+    "As we can see from the code above, GMMs are well known for being the fastest algorithm for learning mixture models. \n",
+    "In this particular case, they work really good as we have suficient points per mixture. When one has insufficiently many points per mixture, estimating the covariance matrices becomes difficult, and the algorithm is known to diverge."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scaling this system up for use in a product\n",
+    "Probably my first step would be to implement the system in another programming language. In my opinion: because it is a dynamic language and because it's way of treating object oriented programms I wouldn't use it in production if I am looking for a clean and fast code. However, in order to prototype and test things it is very covenient.\n",
+    "\n",
+    "Another step would be to define the system, I mean, defining if we are looking for a classification or \"precision system\" (how useful the results are) or for a retrieving or \"recall system\" (how complete the results are)."
    ]
   }
  ],
